# Easypt2

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  compile.ps1  init.ps1  init.sh  packages.cmake  run_pgo.bat
benchmarks/: gcd.ez  gcd.js  gcd.py  numbers.txt  run.ps1  sort.ez  sort.js  sort.py  sort_no_jit.js
docs/: Array.classPrototype.append.md  Array.classPrototype.erase.md  Array.classPrototype.forEach.md  Array.classPrototype.insert.md  Array.classPrototype.insertFrom.md  Array.classPrototype.length.md  Array.classPrototype.readOperator.md  Array.classPrototype.subarray.md  Array.md  Array.readOperator.md  Boolean.md  Class.md  File.classPrototype.close.md  File.classPrototype.create.md  File.classPrototype.flush.md  File.classPrototype.getReadPosition.md  File.classPrototype.getWritePosition.md  File.classPrototype.open.md  File.classPrototype.read.md  File.classPrototype.readAsync.md  File.classPrototype.readBytes.md  File.classPrototype.readBytesAsync.md  File.classPrototype.readLine.md  File.classPrototype.readLineAsync.md  File.classPrototype.readTo.md  File.classPrototype.readToAsync.md  File.classPrototype.remove.md  File.classPrototype.setReadPosition.md  File.classPrototype.setWritePosition.md  File.classPrototype.size.md  File.classPrototype.write.md  File.classPrototype.writeAsync.md  File.classPrototype.writeLine.md  File.classPrototype.writeLineAsync.md  File.md  Function.classPrototype.call.md  Function.md  Gemfile  Number.classPrototype.toFloatingPoint.md  Number.classPrototype.toInteger.md  (+74 more)
docs/_includes/extra/: styles.scss
docs/_site/: feed.xml  index.md  sitemap.xml
docs/_site/built-ins/: Array.md  Number.md  Object.md  Range.md  TcpClient.md  TcpServer.md  Time.md  Timeout.md  argv.md  console.md  execute.md  index.md  modules.md  parse.md
docs/_site/built-ins/Array/readOperator/: index.md
docs/_site/built-ins/Time/sinceEpoch/: index.md
docs/_site/built-ins/console/error/: index.md
docs/_site/built-ins/console/newLine/: index.md
docs/_site/built-ins/console/read/: index.md
docs/_site/built-ins/console/readLine/: index.md
docs/_site/built-ins/console/setInput/: index.md
docs/_site/built-ins/console/warn/: index.md
docs/_site/built-ins/console/write/: index.md
docs/_site/built-ins/console/writeAsync/: index.md
docs/_site/built-ins/console/writeLine/: index.md
docs/_site/built-ins/console/writeLineAsync/: index.md
docs/_site/built-ins/import/getImportPaths/: index.md
docs/_site/built-ins/module/exports/: index.md
docs/_site/built-ins/module/name/: index.md
docs/_site/built-ins/module/path/: index.md
docs/built-ins/: Array.md  Boolean.md  Class.md  File.md  Function.md  Iterator.md  Promise.md  SslClient.md  SslServer.md  String.md  argc.md  getStack.md  import.md  module.md
docs/built-ins/Array/classPrototype/append/: index.md
docs/built-ins/Array/classPrototype/erase/: index.md
docs/built-ins/Array/classPrototype/insert/: index.md
docs/built-ins/Array/classPrototype/insertFrom/: index.md
docs/built-ins/Array/classPrototype/iterator/: index.md
docs/built-ins/Array/classPrototype/join/: index.md
docs/built-ins/Array/classPrototype/readOperator/: index.md
docs/built-ins/File/classPrototype/constructor/: index.md
docs/built-ins/File/classPrototype/readBytesAsync/: index.md
docs/built-ins/File/classPrototype/readLineAsync/: index.md
docs/built-ins/File/classPrototype/readToAsync/: index.md
docs/built-ins/File/classPrototype/setReadPosition/: index.md
docs/built-ins/File/classPrototype/writeLine/: index.md
docs/built-ins/Function/classPrototype/call/: index.md
docs/built-ins/Iterator/classPrototype/constructor/: index.md
docs/built-ins/Iterator/classPrototype/next/: index.md
docs/built-ins/Iterator/end/: index.md
docs/built-ins/Number/classPrototype/toInteger/: index.md
docs/built-ins/Object/classPrototype/addProperty/: index.md
docs/built-ins/Object/classPrototype/getOwnPropertyNames/: index.md
docs/built-ins/Object/classPrototype/hasOwnProperty/: index.md
docs/built-ins/Object/classPrototype/readOperator/: index.md
docs/built-ins/Object/classPrototype/toNumber/: index.md
docs/built-ins/Promise/classPrototype/await/: index.md
docs/built-ins/Promise/classPrototype/then/: index.md
docs/built-ins/Promise/tick/: index.md
docs/built-ins/Range/classPrototype/iterator/: index.md
docs/built-ins/console/controlSequence/: index.md
docs/built-ins/console/getOutput/: index.md
docs/built-ins/console/readAsync/: index.md
docs/built-ins/console/readLineAsync/: index.md
docs/built-ins/module/filename/: index.md
easypt_vsce/: .gitignore  CHANGELOG.md  README.md  language-configuration.json  package-lock.json  package.json
easypt_vsce/snippets/: easypt.json
easypt_vsce/src/: extension.ts
easypt_vsce/syntaxes/: easypt.tmLanguage.json
examples/: classes.ez  gl.ez  helloWorld.ez  sockets.ez  ssl.ez  testBasic1.ez
pgo/: 1.ez  2.ez
src/: CMakeLists.txt  alignment.h  allocator.h  assert.h  buffer.h  childProcess.cpp  childProcess.h  common.h  console.cpp  console.h  copyPtr.h  core.cpp  core.h  coroutine.cpp  coroutine.h  coroutineEvent.h  defines.h  error.h  externalFunction.cpp  externalFunction.h  externalLibrary.h  externalLibraryCommon.h  externalLibraryTools.h  file.cpp  file.h  iterator.h  iteratorBase.h  iteratorInterface.h  library.h  main.cpp  name.cpp  name.h  nobject.cpp  nobject.h  number.cpp  number.h  objectPtrImpl.cpp  objectPtrImpl.h  osDependent.cpp  osDependent.h  (+15 more)
src/parser/: CMakeLists.txt  Node.cpp  Node.h  NodeJit.cpp  gram.g  gramUtility.cpp  gramUtility.h  scan.l  smallVector.h  treeParser.cpp  treeParser.h
src/parser/CApi/: CApi.c  CApi.cpp  CApi.h  CLambda.h  CMacros.h
tests/: CMakeLists.txt  HttpServer.ez  tcpClient.ez  tcpServer.ez  test0.ez  test3.ez  testBasic1.cpp  testBasic1.ez  testBasic2.cpp  testBasic2.ez  testConversions.cpp  testDummyExpressions.cpp  testNumbers.cpp  testRunner.cpp  testUtils.cpp  utils.h
tests/e2e/in/: 1.ez  2.ez  3.ez  4.ez  5.ez  6.ez  examples.ez
tests/e2e/in/files/: secondFile.ez
(+61 files in other folders)
