cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

project(Easypt2)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${PROJECT_SOURCE_DIR}/bin)

if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
    # /favor:INTEL64 /arch:AVX2
    add_compile_options(/O2 /GS- /GT /W4 /MT /EHa /utf-8 /MP /wd4100 /wd5033 /wd4305 /wd4505 /wd4244 /wd4996 /wd4702)
    add_compile_options(/GL /c)
    add_link_options(/LTCG)
    if (PGO STREQUAL "GENPROFILE")
        add_link_options(/GENPROFILE)
    elseif (PGO STREQUAL "USEPROFILE")
        add_link_options(/USEPROFILE:AGGRESSIVE)
    endif()
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    add_compile_options(-O3 -fno-operator-names -static-libgcc -static-libstdc++)
    link_libraries(stdc++fs)
elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
    add_compile_options(-O3 -Wno-narrowing)
    link_libraries(libc++experimental)
endif ()

enable_testing()
add_subdirectory(src)
add_subdirectory(tests)

install(DIRECTORY library DESTINATION bin/.. COMPONENT library)
include(packages.cmake)
include(CPack)